# otograph

./: .gitignore  Cargo.toml  README.md  blog.md
assets/: k_Kgate.cubin  k_Kgate.json  k_Kz.cubin  k_Kz.json  k_conv0_2.cubin  k_conv0_2.json  k_conv1_2.cubin  k_conv1_2.json  k_conv2_2.cubin  k_conv2_2.json  k_conv3_2.cubin  k_conv3_2.json  k_stft2.cubin  k_stft2.json  k_vad_staged.cubin  k_vad_staged.json
scripts/: build_vad_kernels.py  download_model.sh  download_onnxruntime.sh  export_vad_16k.py  vadref.py
src/: asr.rs  container.rs  ffmpeg.rs  langdetect.rs  main.rs  media.rs  srt.rs  vad.rs  vad_assets.rs  wav.rs
