[package]
name = "otograph"
version = "0.1.0"
edition = "2021"
description = "Generate SRT subtitles from video/audio via Silero VAD + Qwen3-ASR"
license = "LGPL-3.0-or-later"
repository = "https://github.com/iMMIQ/otograph"
keywords = ["asr", "subtitles", "srt", "vad", "silero"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
walkdir = "2.5"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
whatlang = "0.18"

[profile.release]
opt-level = 3
